--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tailwind-css-starter-pack",
-  "homepage": "https://Anurag7676.github.io/React-Weather-App",
+  "homepage": "https://suman3262.github.io/React-Weather-APP",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
